# DevMatic

./: .gitignore  LICENSE  Makefile  README.md  build.yml  devmatic.py  devmatic.spec  github_config.py  npm_manager.py  pip_manager.py  project_structure.txt  pyproject.toml  requirements.txt  sdk.json  test.py  vscode_manager.py
.github/workflows/: build.yml
scripts/: build.py  create_installer.py
src/core/: environment.py  installer.py
src/devmatic/: __init__.py  __main__.py
src/devmatic/apps/: apps.json  toolkit.json
src/devmatic/cli/: __init__.py  list.py  main.py  update.py
src/devmatic/cli/commands/: __init__.py  install.py
src/devmatic/core/: config.py  environment.py
src/devmatic/core/base/: installer.py
src/devmatic/installers/: postgres.py
src/devmatic/managers/: __init__.py  nginx.py  php.py
src/devmatic/utils/: __init__.py  download.py  format.py  hash.py  logger.py  sdk.py  system.py  windows.py
src/utils/: file_utils.py  hash.py  logger.py  network.py
tests/: __init__.py  conftest.py
tests/test_cli/: __init__.py  test_build.py  test_installer.py  test_main.py
tests/test_installers/: __init__.py  test_base.py
tests/test_utils/: __init__.py  test_environment.py  test_windows.py
